# optimizations

./: CMakeLists.txt  README.md  main.cpp  optimizations.hpp
.github/workflows/: cmake-multi-platform.yml
